<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Views.ExerciseFragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/im_exercise"
                        android:scaleType="fitXY"
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        tools:ignore="ContentDescription" />
                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="50dp"
                        android:layout_gravity="center"
                        android:layout_height="50dp"
                        app:srcCompat="@drawable/ic_play"
                        tools:ignore="ContentDescription" />
                </FrameLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="30dp"
                    tools:text="Straight Drive"
                    android:id="@+id/tv_straightdrive"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="75dp"
                    android:layout_height="2dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:background="#0F0" />

                <TextView
                    android:id="@+id/tv_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="10dp"
                    tools:text="@string/desc"
                    android:textColor="#f5f5f5"
                    android:textSize="14sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@string/repetitions"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_repetitions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        tools:text="2 sets 25 reps"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"
                        tools:ignore="RelativeOverlap" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/curved_rectangle"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@string/equipements"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:drawableEndCompat="@drawable/ic_arrow" />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/infographics"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:id="@+id/im_illustration"
                    android:layout_margin="10dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/curved_rectangle"
                    android:scaleType="fitXY"
                    tools:src="@android:drawable/dark_header"
                    tools:ignore="ContentDescription" />
            </LinearLayout>
        </ScrollView>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/scrollView" />
        <TextView
            android:id="@+id/tv_error"
            android:layout_width="match_parent"
            android:text="@string/nodata"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/scrollView"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>