<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools">
    <!--<data>
        <variable
            name="toppicks"
            type="com.example.supersub.Models.TopPicks" />
        <variable
            name="listenr"
            type="com.example.supersub.Views.ExploreClickListner" />
    </data>-->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="#ffffff"
        android:layout_margin="2dp"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="8dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:id="@+id/rowclick"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                card_view:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:drawableEndCompat="@drawable/ic_time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_sbtitle"
                app:layout_constraintTop_toBottomOf="@id/imageView"
                card_view:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:scaleType="fitXY"
                android:contentDescription="@string/app_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/pro"
                android:textColor="@android:color/white"
                android:padding="6dp"
                android:background="@drawable/shape"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_sbtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                card_view:text="@string/app_name"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/tv_title"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_difficulty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                card_view:text="@string/app_name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_sbtitle" />

            <TextView
                android:id="@+id/tv_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"
                card_view:text="@string/_1_00"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageView"
                app:srcCompat="@drawable/ic_play"
                card_view:ignore="ContentDescription" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</layout>